# liboqs

./: CMakeLists.txt
.CMake/: alg_support.cmake
src/: CMakeLists.txt  oqsconfig.h.cmake
src/sig/: sig.c  sig.h
src/sig/aigis-sig/: CMakeLists.txt  sig_aigis-sig.h  sig_aigis-sig_I.c  sig_aigis-sig_II.c  sig_aigis-sig_III.c  sig_aigis-sig_IIb.c
src/sig/aigis-sig/params-I/: Alg.c  Alg.h  api.h  fips202x4.c  ntt.c  ntt.h  packing.c  packing.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  sign.c  sign.h
src/sig/aigis-sig/params-II/: aes.c  ntt.c  ntt.h  packing.c  packing.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  rng.c  sign.c  sign.h
src/sig/aigis-sig/params-III/: Aigis_sig.vcxproj  Alg.c  api.h  packing.c  params.h  poly.c  rng.h  sign.h
src/sig/aigis-sig/params-IIb/: Aigis_sig.vcxproj.filters  aes256ctr.c  fips202x4.c  ntt.c  ntt.h  packing.c  packing.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.c  randombytes.h  sign.c  sign.h
