set(_AIGIS_SIG_OBJS "")

if(OQS_ENABLE_SIG_aigis_sig_param_i)
    add_library(aigis_sig_param_i OBJECT sig_aigis-sig_I.c params-I/aes.c params-I/aes.h params-I/aes256ctr.c params-I/aes256ctr.h params-I/Alg.c params-I/Alg.h params-I/api.h params-I/fips202.c params-I/fips202.h params-I/fips202x4.c params-I/fips202x4.h params-I/ntt.c params-I/ntt.h params-I/packing.c params-I/packing.h params-I/params.h params-I/poly.c params-I/poly.h params-I/polyvec.c params-I/polyvec.h params-I/randombytes.c params-I/randombytes.h params-I/rng.c params-I/rng.h params-I/sign.c params-I/sign.h)
    target_include_directories(aigis_sig_param_i PRIVATE ${CMAKE_CURRENT_LIST_DIR}/aigis_sig_param_i)
    target_include_directories(aigis_sig_param_i PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_AIGIS_SIG_OBJS ${_AIGIS_SIG_OBJS} $<TARGET_OBJECTS:aigis_sig_param_i>)
endif()

if(OQS_ENABLE_SIG_aigis_sig_param_ii)
    add_library(aigis_sig_param_ii OBJECT sig_aigis-sig_II.c params-II/aes.c params-II/aes.h params-II/aes256ctr.c params-II/aes256ctr.h params-II/Alg.c params-II/Alg.h params-II/api.h params-II/fips202.c params-II/fips202.h params-II/fips202x4.c params-II/fips202x4.h params-II/ntt.c params-II/ntt.h params-II/packing.c params-II/packing.h params-II/params.h params-II/poly.c params-II/poly.h params-II/polyvec.c params-II/polyvec.h params-II/randombytes.c params-II/randombytes.h params-II/rng.c params-II/rng.h params-II/sign.c params-II/sign.h)
    target_include_directories(aigis_sig_param_ii PRIVATE ${CMAKE_CURRENT_LIST_DIR}/aigis_sig_param_ii)
    target_include_directories(aigis_sig_param_ii PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_AIGIS_SIG_OBJS ${_AIGIS_SIG_OBJS} $<TARGET_OBJECTS:aigis_sig_param_ii>)
endif()

if(OQS_ENABLE_SIG_aigis_sig_param_iib)
    add_library(aigis_sig_param_iib OBJECT sig_aigis-sig_IIb.c params-IIb/aes.c params-IIb/aes.h params-IIb/aes256ctr.c params-IIb/aes256ctr.h params-IIb/Alg.c params-IIb/Alg.h params-IIb/api.h params-IIb/fips202.c params-IIb/fips202.h params-IIb/fips202x4.c params-IIb/fips202x4.h params-IIb/ntt.c params-IIb/ntt.h params-IIb/packing.c params-IIb/packing.h params-IIb/params.h params-IIb/poly.c params-IIb/poly.h params-IIb/polyvec.c params-IIb/polyvec.h params-IIb/randombytes.c params-IIb/randombytes.h params-IIb/rng.c params-IIb/rng.h params-IIb/sign.c params-IIb/sign.h)
    target_include_directories(aigis_sig_param_iib PRIVATE ${CMAKE_CURRENT_LIST_DIR}/aigis_sig_param_iib)
    target_include_directories(aigis_sig_param_iib PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_AIGIS_SIG_OBJS ${_AIGIS_SIG_OBJS} $<TARGET_OBJECTS:aigis_sig_param_iib>)
endif()

if(OQS_ENABLE_SIG_aigis_sig_param_iii)
    add_library(aigis_sig_param_iii OBJECT sig_aigis-sig_III.c params-III/aes.c params-III/aes.h params-III/aes256ctr.c params-III/aes256ctr.h params-III/Alg.c params-III/Alg.h params-III/api.h params-III/fips202.c params-III/fips202.h params-III/fips202x4.c params-III/fips202x4.h params-III/ntt.c params-III/ntt.h params-III/packing.c params-III/packing.h params-III/params.h params-III/poly.c params-III/poly.h params-III/polyvec.c params-III/polyvec.h params-III/randombytes.c params-III/randombytes.h params-III/rng.c params-III/rng.h params-III/sign.c params-III/sign.h)
    target_include_directories(aigis_sig_param_iii PRIVATE ${CMAKE_CURRENT_LIST_DIR}/aigis_sig_param_iii)
    target_include_directories(aigis_sig_param_iii PRIVATE ${PROJECT_SOURCE_DIR}/src/common/pqclean_shims)
    set(_AIGIS_SIG_OBJS ${_AIGIS_SIG_OBJS} $<TARGET_OBJECTS:aigis_sig_param_iii>)
endif()